# black-codeclimate

./: LICENSE  README.md  pyproject.toml
black_codeclimate/: __init__.py  __main__.py  generate_report.py
